--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,4 @@
 {erl_opts, [debug_info]}.
 {deps_dir, ["deps"]}.
 
-{deps,
- [
-  {lager, ".*", {git, "https://github.com/basho/lager.git", "master"}},
-  {sync,  ".*", {git, "https://github.com/rustyio/sync.git", "master"}},
-  {eper,  ".*", {git, "https://github.com/massemanet/eper.git", "master"}},
-  {gproc, ".*", {git, "https://github.com/uwiger/gproc.git", "master"}}
- ]}.
+{deps, []}.
